fix clipping on menu icon

--- a/_source/scss/block/_return.scss
+++ b/_source/scss/block/_return.scss
@@ -39,8 +39,7 @@
 
   svg {
     height: 1.5em;
-    margin: auto 0;
-    width: 2em;
+    margin: auto .25em;
   }
 }
 
